# fishmans-adventure

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: deploy_game_to_pages.yml
enemy/: bundles.rs  components.rs  mod.rs  systems.rs  types.rs
site/: index.html
src/: animation.rs  armor.rs  audio.rs  camera.rs  collision.rs  configs.rs  dialog.rs  enemy.rs  game_state.rs  gui.rs  gun.rs  input.rs  lib.rs  loot.rs  main.rs  player.rs  portal.rs  potion.rs  resources.rs  state.rs  town.rs  ui.rs  utils.rs  world.rs
src/enemy/: behaviors.rs  builder.rs  bundles.rs  components.rs  mod.rs  plugin.rs  presets.rs  systems.rs  types.rs
src/player/: components.rs  mod.rs  plugin.rs  systems.rs
src/ui/: components.rs  mod.rs  plugin.rs
src/ui/systems/: in_game_ui.rs  loot_grid.rs  loot_ui.rs  menus.rs  mod.rs  player_info.rs
