[package]
name = "fishmans_adventure"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.15.1", features = ["dynamic_linking"] }
kd-tree = "0.6.0"
leafwing-input-manager = "0.16"
wasm-bindgen = "0.2.99"
rand = "0.8.5"
typenum = "1.17.0"
bevy-inspector-egui = "0.28"
chrono = "0.4.39"
bevy_kira_audio = "0.22.0"
kira = "0.9.6"
log = { version = "*", features = [
    "max_level_debug",
    "release_max_level_warn",
] }
[workspace]
resolver = "2"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"

# Optimize for size in the wasm-release profile to reduce load times and bandwidth usage on web.
[profile.wasm-release]
# Default to release profile values.
inherits = "release"
# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime performance.
opt-level = "s"
# Strip all debugging information from the binary to slightly reduce file size.
strip = "debuginfo"
